--- a/sites/all/themes/gxnulib/sass/components/blocks/_block-list.scss
+++ b/sites/all/themes/gxnulib/sass/components/blocks/_block-list.scss
@@ -12,7 +12,7 @@ and open the template in the editor.
         .block__content {
             .field__item {
                 @include inline-block;
-                padding: 0 $spacing $spacing $spacing;
+                padding: 0 $spacing $spacing*2 $spacing;
                 width: 7em;
                 text-align: center;
                 
