--- a/sites/all/themes/gxnulib/sass/components/menus/_menu.scss
+++ b/sites/all/themes/gxnulib/sass/components/menus/_menu.scss
@@ -105,7 +105,7 @@
 
         li {
             > a {
-                @include inline-block;
+                display: inline;
                 
                 &:hover,
                 &:focus {
