--- a/sites/all/themes/gxnulib/sass/components/misc/_related-article.scss
+++ b/sites/all/themes/gxnulib/sass/components/misc/_related-article.scss
@@ -33,7 +33,7 @@ and open the template in the editor.
                 font-family: "FontAwesome";
                 content: "\f101";
                 padding-right: $spacing;
-                display: inline-block;
+                @include inline-block;
             }
             
             a {
