--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -999,7 +999,7 @@ and open the template in the editor.
       /* line 35, ../sass/components/tabs/_search-tab.scss */
       .block--quicktabs-search-tabs ul.quicktabs-tabs li a {
         display: block;
-        border-right: 1px solid #f0f0f0; }
+        border-right: 1px solid #efede8; }
       /* line 40, ../sass/components/tabs/_search-tab.scss */
       .block--quicktabs-search-tabs ul.quicktabs-tabs li:hover {
         background: #606873;
