--- a/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
+++ b/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
@@ -7,10 +7,7 @@ and open the template in the editor.
     Created on : Apr 20, 2015, 9:42:05 PM
     Author     : Stephen
 */
-.block--quicktabs-search-tabs {
-    margin-top: 10%;
-    margin-left: 10%;
-    
+.block--quicktabs-search-tabs {    
     ul.quicktabs-tabs {
         padding: 0;
         margin: 0;
@@ -34,7 +31,7 @@ and open the template in the editor.
             
             a {
                 display: block;
-                border-right: 1px solid $border-color;
+                border-right: 1px solid lighten($tab-menu-link-bgcolor, 5%);
             }
 
             &:hover {
