--- a/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
+++ b/sites/all/themes/gxnulib/css/layouts/sword-front/sword-front.layout.no-query.css
@@ -33,11 +33,13 @@ and open the template in the editor.
 
 /* line 31, ../../../sass/layouts/sword-front/sword-front.layout.scss */
 .l-heading {
-  background: url(../../../images/banner.jpg) center 0 no-repeat;
   width: 100%;
-  height: 220px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
-  border-radius: 4px; }
+  border-radius: 4px;
+  margin-top: 1.71429em;
+  padding-top: 0em;
+  padding-bottom: 0em;
+  margin-bottom: 0em; }
 
 /*# sourceMappingURL=sword-front.layout.no-query.css.map */
