--- a/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
+++ b/sites/all/themes/gxnulib/sass/components/tabs/_search-tab.scss
@@ -28,6 +28,7 @@ and open the template in the editor.
             @include inline-block;
             @include pie-clearfix;
             cursor: pointer;
+            height: 40px;
             
             a {
                 display: block;
@@ -64,6 +65,7 @@ and open the template in the editor.
         @include border-bottom-radius($radius);
         @include pie-clearfix;
         text-align: center;
+        height: 220px;
 
         input[type="text"] {
             width: 85%;
