--- a/sites/all/themes/gxnulib/css/gxnulib.styles.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.styles.css
@@ -856,27 +856,33 @@ and open the template in the editor.
   z-index: 10;
   text-align: center;
   width: 100%; }
-  /* line 36, ../sass/components/slideshows/_culture-slideshow.scss */
-  .view-view-culture-slideshow .views-slideshow-controls-bottom .views_slideshow_pager_field_item .views-field-counter {
-    background: #333333;
-    border: 1px solid #333333; }
-    /* line 40, ../sass/components/slideshows/_culture-slideshow.scss */
-    .view-view-culture-slideshow .views-slideshow-controls-bottom .views_slideshow_pager_field_item .views-field-counter .views-content-counter {
-      color: #ffffff; }
-  /* line 47, ../sass/components/slideshows/_culture-slideshow.scss */
-  .view-view-culture-slideshow .views-slideshow-controls-bottom .active .views-field-counter {
-    background: #922525;
-    border: 1px solid #922525; }
-  /* line 53, ../sass/components/slideshows/_culture-slideshow.scss */
+  /* line 35, ../sass/components/slideshows/_culture-slideshow.scss */
   .view-view-culture-slideshow .views-slideshow-controls-bottom .views_slideshow_pager_field_item {
-    cursor: pointer;
     display: inline-block;
     vertical-align: middle;
     *vertical-align: auto;
     *zoom: 1;
     *display: inline;
-    font-family: "FontAwesome";
-    content: "\f111"; }
+    margin-top: -1em; }
+    /* line 39, ../sass/components/slideshows/_culture-slideshow.scss */
+    .view-view-culture-slideshow .views-slideshow-controls-bottom .views_slideshow_pager_field_item .views-field-counter {
+      background: #333333;
+      border: 1px solid #333333;
+      width: .5em;
+      height: .5em; }
+      /* line 45, ../sass/components/slideshows/_culture-slideshow.scss */
+      .view-view-culture-slideshow .views-slideshow-controls-bottom .views_slideshow_pager_field_item .views-field-counter .views-content-counter {
+        color: #333333;
+        font-size: 8px;
+        font-size: 0.57143rem;
+        line-height: .5em; }
+  /* line 54, ../sass/components/slideshows/_culture-slideshow.scss */
+  .view-view-culture-slideshow .views-slideshow-controls-bottom .active .views-field-counter {
+    background: #922525;
+    border: 1px solid #922525; }
+    /* line 58, ../sass/components/slideshows/_culture-slideshow.scss */
+    .view-view-culture-slideshow .views-slideshow-controls-bottom .active .views-field-counter .views-content-counter {
+      color: #922525; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
@@ -1108,11 +1114,15 @@ and open the template in the editor.
       list-style-type: none;
       margin-left: 0;
       padding: 0; }
-      /* line 31, ../sass/components/tabs/_service-tab.scss */
+      /* line 30, ../sass/components/tabs/_service-tab.scss */
       .block--quicktabs-resource-service-tabs .quicktabs_main ul.menu li.expanded > a {
         color: #922525;
         font-weight: bold; }
-    /* line 37, ../sass/components/tabs/_service-tab.scss */
+      /* line 35, ../sass/components/tabs/_service-tab.scss */
+      .block--quicktabs-resource-service-tabs .quicktabs_main ul.menu li.expanded > ul.menu {
+        overflow: hidden;
+        max-height: 4.42857em; }
+    /* line 41, ../sass/components/tabs/_service-tab.scss */
     .block--quicktabs-resource-service-tabs .quicktabs_main ul.menu li.leaf {
       padding: 0 0 0.5em 0;
       list-style-image: none;
@@ -1125,13 +1135,13 @@ and open the template in the editor.
       *display: inline;
       width: 6em;
       white-space: nowrap; }
-      /* line 44, ../sass/components/tabs/_service-tab.scss */
+      /* line 48, ../sass/components/tabs/_service-tab.scss */
       .block--quicktabs-resource-service-tabs .quicktabs_main ul.menu li.leaf:before {
         font-family: "FontAwesome";
         content: "\f0da";
         padding-right: 0.5em;
         color: #922525; }
-/* line 54, ../sass/components/tabs/_service-tab.scss */
+/* line 58, ../sass/components/tabs/_service-tab.scss */
 .block--quicktabs-resource-service-tabs ul.quicktabs-tabs {
   padding: 0;
   margin: 0;
@@ -1144,10 +1154,10 @@ and open the template in the editor.
     content: "";
     display: table;
     clear: both; }
-  /* line 61, ../sass/components/tabs/_service-tab.scss */
+  /* line 65, ../sass/components/tabs/_service-tab.scss */
   .block--quicktabs-resource-service-tabs ul.quicktabs-tabs a {
     color: #333333; }
-  /* line 65, ../sass/components/tabs/_service-tab.scss */
+  /* line 69, ../sass/components/tabs/_service-tab.scss */
   .block--quicktabs-resource-service-tabs ul.quicktabs-tabs li {
     padding: 0.5em;
     width: 50%;
@@ -1164,13 +1174,13 @@ and open the template in the editor.
       content: "";
       display: table;
       clear: both; }
-    /* line 73, ../sass/components/tabs/_service-tab.scss */
+    /* line 77, ../sass/components/tabs/_service-tab.scss */
     .block--quicktabs-resource-service-tabs ul.quicktabs-tabs li:hover {
       color: #922525; }
-      /* line 76, ../sass/components/tabs/_service-tab.scss */
+      /* line 80, ../sass/components/tabs/_service-tab.scss */
       .block--quicktabs-resource-service-tabs ul.quicktabs-tabs li:hover a {
         text-decoration: none; }
-    /* line 82, ../sass/components/tabs/_service-tab.scss */
+    /* line 86, ../sass/components/tabs/_service-tab.scss */
     .block--quicktabs-resource-service-tabs ul.quicktabs-tabs li.active a {
       color: #922525; }
 
