--- a/sites/all/themes/gxnulib/sass/abstractions/_typography.scss
+++ b/sites/all/themes/gxnulib/sass/abstractions/_typography.scss
@@ -13,3 +13,7 @@ and open the template in the editor.
     font-size: $font-size;
     font-size: ($font-size / $base-font-size) * 1rem;
 }
+
+@function em($px, $base: $base-font-size) {
+    @return ($px / $base) * 1em;
+}
